<resources>
    <string name="app_name">PPI Calculator</string>

    <string name="action_settings">Settings</string>
    <string name="screen_size_edittext">Screen Size (in inches)</string>
    <string name="screen_height_edittext">Screen Height (in pixels)</string>
    <string name="screen_width_edittext">Screen Width (in pixels)</string>
    <string name="calculate_button">Calculate</string>
    <string name="auto_detect_button">Auto Detect</string>
    <string name="clear_button">Clear</string>
    <string name="settings_label">Settings</string>

    <string name="accurate_checkbox">Accurate Result</string>
    <string name="preset_settings">Presets</string>
    <string name="about_settings">About</string>
    <string name="share_settings">Share Apk</string>
    <string name="about_dialog_text">PPI Calculator is an open source application with an easy to use interface.\n\nSource code is available at Github:\nwww.github.com/vaibhavlakhera/ppicalculator</string>
</resources>
