<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/preset_settings"
        android:orderInCategory="100"
        android:title="@string/preset_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/share_settings"
        android:orderInCategory="102"
        android:title="@string/share_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/about_settings"
        android:orderInCategory="103"
        android:title="@string/about_settings"
        app:showAsAction="never"/>

</menu>
